--- a/backend/helpers/LLM/.env
+++ b/backend/helpers/LLM/.env
@@ -1,1 +1,2 @@
 GROQ_KEY = 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
+GROQ_KEY2 = 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
